# your-camp

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  index.md
include/your_camp/: message.hpp  soldier.hpp  thecamp.hpp
src/: CMakeLists.txt  main.cpp
src/your_camp/: message.cpp  soldier.cpp  thecamp.cpp
